-For GetCalculatedEquippedWeight / GetBaseEquippedWeight / GetNumBrokenEquippedItems:
	*Fixed items being counted multiple times if they had multiple equip slots.
	*Added two new flags: skipUnplayable and noQuestItems
	*DEFAULT BEHAVIOR CHANGED: In order to avoid including unplayable items like the pipboy by default-calling the function, 
		`skipUnplayable` is automatically checked if Flags == 0 (or not provided).
		(This also applies to the new GetEquippedItems/UnequipItems functions)

-New Functions:
* SetShowOffDebugMode
* GetShowOffDebugMode
* UnequipItems
* GetEquippedItems
* IsBaseForm
* SetRandomizerSeed
* SetSeedUsingForm
* GetRandomizerSeed
* RandSeeded
* GetRandomPercentSeeded
* IsReferenceCloned
* AdvanceSeed

//===v1.15

===Misc:
* When the game starts, there is now a console print that says if ShowOff is running and what version it's at.
* Optimized GetEquipped__ functions.

===DEFAULT BEHAVIOR CHANGES:
*GetEquipped__ functions now account for items that have no equip slots (I didn't realize they could be equipped), no matter what the equip slot filters are.
In order to filter those out, there is now a new flag: NoSlotlessItems

===Bug Fixes:
* Fixed certain GetEquipped__ functions always printing to console
* Add RandSeeded safety check (Min must be <= Max) - before, breaking this assertion caused a crash. Returns -1 if this assertion fails.
* Fix GetRandomizerSeed returning NAN (returns -1 for errors now).

===New Functions:
* IsTemporaryReference - this should be kept undocumented, I didn't sufficiently test it.
* GetPCHasScriptedFastTravelOverride
* GetPCCanFastTravel
* WeaponHasFlag
* ActorHasBaseFlag
* RemoveAllItemsShowOff


//===v1.17

===New Functions:
* ForceWeaponJamAnim
* DisableAlt
* EnableAlt





(Template:)
//===v???
===Bug Fixes:
* 

===New Functions:
*

******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********