@@ -64,7 +64,8 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 * ForceWeaponJamAnim
 * DisableAlt
 * EnableAlt
-
+* GetCalculatedSkillPoints
+* GetLevelUpMenuPoints
 
 
 
